# geom

./: Cargo.toml  Dockerfile  README.md  data.csv  output.csv
assets/: data.csv  mapping.csv  output.csv  outputf.csv  test_data.py
src/: api.rs  args.rs  csv_utils.rs  error.rs  geometry.rs  main.rs  save_strategy.rs
