[package]
name = "geom"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
ndarray = "0.16.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

